fix - layout on mobile

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -11,6 +11,7 @@
 body {
 	margin: 0;
 	background-color: var(--color-bg);
+	min-width: 200px;
 }
 
 h1 {
